@@ -18,54 +18,54 @@
                                (file-name-directory
                                 (or load-file-name buffer-file-name))))
 
-(require 'init-custom)
-(require 'init-path)
-(require 'init-editor)
-(require 'init-keybinding)
-(require 'init-package)
+(require 'init-custom nil 'noerror)
+(require 'init-path nil 'noerror)
+(require 'init-editor nil 'noerror)
+(require 'init-keybinding nil 'noerror)
+(require 'init-package nil 'noerror)
 
 ;; modules
-(require 'init-auto-complete)
-(require 'init-auto-insert)
-(require 'init-bm)
-(require 'init-calendar)
-(require 'init-cedet)
-(require 'init-company)
-(require 'init-dired)
-(require 'init-ecb)
-(require 'init-emms)
-(require 'init-flycheck)
-(require 'init-helm)
-(require 'init-hideshow)
-(require 'init-highlight)
-(require 'init-leim)
-(require 'init-server)
-(require 'init-tabbar)
-(require 'init-toolbar)
-(require 'init-vc)
-(require 'init-yasnippet)
+(require 'init-auto-complete nil 'noerror)
+(require 'init-auto-insert nil 'noerror)
+(require 'init-bm nil 'noerror)
+(require 'init-calendar nil 'noerror)
+(require 'init-cedet nil 'noerror)
+(require 'init-company nil 'noerror)
+(require 'init-dired nil 'noerror)
+(require 'init-ecb nil 'noerror)
+(require 'init-emms nil 'noerror)
+(require 'init-flycheck nil 'noerror)
+(require 'init-helm nil 'noerror)
+(require 'init-hideshow nil 'noerror)
+(require 'init-highlight nil 'noerror)
+(require 'init-leim nil 'noerror)
+(require 'init-server nil 'noerror)
+(require 'init-tabbar nil 'noerror)
+(require 'init-toolbar nil 'noerror)
+(require 'init-vc nil 'noerror)
+(require 'init-yasnippet nil 'noerror)
 
 ;; progmodes
-(require 'init-prog)
-(require 'init-cc)
-(require 'init-csharp)
-(require 'init-emacs-lisp)
-(require 'init-go)
-(require 'init-haskell)
-(require 'init-java)
-(require 'init-javascript)
-(require 'init-perl)
-(require 'init-php)
-(require 'init-python)
-(require 'init-rust)
-(require 'init-sh)
-(require 'init-sql)
+(require 'init-prog nil 'noerror)
+(require 'init-cc nil 'noerror)
+(require 'init-csharp nil 'noerror)
+(require 'init-emacs-lisp nil 'noerror)
+(require 'init-go nil 'noerror)
+(require 'init-haskell nil 'noerror)
+(require 'init-java nil 'noerror)
+(require 'init-javascript nil 'noerror)
+(require 'init-perl nil 'noerror)
+(require 'init-php nil 'noerror)
+(require 'init-python nil 'noerror)
+(require 'init-rust nil 'noerror)
+(require 'init-sh nil 'noerror)
+(require 'init-sql nil 'noerror)
 
 ;; textmodes
-(require 'init-artist)
-(require 'init-org)
-(require 'init-text)
-(require 'init-xml)
+(require 'init-artist nil 'noerror)
+(require 'init-org nil 'noerror)
+(require 'init-text nil 'noerror)
+(require 'init-xml nil 'noerror)
 
 (provide 'init)
 
